Strip out broken env vars

--- a/rabbit-consumer-deployment.yml
+++ b/rabbit-consumer-deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: perf-test
-  name: perf-test-consume
+  name: perf-test-consume-rh-case
 spec:
   replicas: 1
   selector:
@@ -21,7 +21,7 @@ spec:
           args:
             [
               "--uri",
-              "amqp://$RABBIT_USERNAME:$RABBIT_PASSWORD@$RABBIT_HOST",
+              "amqp://<USERNAME>:<PASSWORD>@<HOST>",
               "--rate",
               "150",
               "--producers",
@@ -42,19 +42,3 @@ spec:
 #            limits:
 #              cpu: "1"
 #              memory: "1Gi"
-          env:
-            - name: RABBIT_HOST
-              valueFrom:
-                secretKeyRef:
-                  key: rabbitmq-host
-                  name: rabbitmq-host
-            - name: RABBIT_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  key: RABBIT_USERNAME
-                  name: rabbitmq-cred
-            - name: RABBIT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  key: RABBIT_PASSWORD
-                  name: rabbitmq-cred
