--- a/rabbit-consumer-deployment.yml
+++ b/rabbit-consumer-deployment.yml
@@ -30,6 +30,8 @@ spec:
               "1",
               "--exchange",
               "<EXCHANGE>",
+              "--routing-key",
+              "<ROUTING_KEY>",
               "--queue",
               "<QUEUE NAME>",
               "--predeclared"
